# tga

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  decoder.cpp  encoder.cpp  tga.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
